Correct example enviroment

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ TOKEN_SECRET=verySecret
 LOG_FILE=out.log
 LOG_LEVEL=debug
 
-OAUTH_PLAYGROUND = 'https://developers.google.com/oauthplayground';
+OAUTH_PLAYGROUND='https://developers.google.com/oauthplayground'
 PROJECT_ID=Timesbook
 SENDER_EMAIL_ADDRESS=test@gmail.com
 MAILING_SERVICE_CLIENT_ID=4324654654876-lsdsadsdasgieurijk896767fdsas.apps.googleusercontent.com
