--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.10.1",
     "nodemailer": "^6.4.13",
     "nodemon": "^2.0.4",
+    "validate.js": "^0.13.1",
     "winston": "^3.3.3"
   }
 }
