--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+FRONTEND_URL=http://localhost:8000
 DB_CONNECTION=mongodb+srv://userpedro:hispass@cluster0.dflu08.mongodb.net/test
 TOKEN_SECRET=verySecret
 
