--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-random-string": "^3.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "googleapis": "^60.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
